@@ -4,7 +4,14 @@ News
 Pyclewn 1.6
 -----------
 
-.. March 23, 2011
+.. March 26, 2011
+
+New feature
+^^^^^^^^^^^
+
+* New ``none`` LOCATION of the ``--window`` command line option. This option
+  disables the automatic display of the console and may be useful when using
+  Vim tabs and keeping the console in a tab of its own.
 
 Bug fixes
 ^^^^^^^^^
