@@ -1,5 +1,7 @@
-2011-03-23  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2011-03-26  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* vim.py buffer.py netbeans.py debugger.py: Add the 'none' LOCATION to
+	the '--window' command line option.
 	* gdb.py: Ignore 'sigint' or 'quit' command on startup.
 	* gdb.py gdbmi.py debugger.py posix.py: On gdb abnormal termination,
 	save the project file and forcibly terminate the current session.
